# redisearch-api-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.circleci/: config.yml
.github/workflows/: rust.yml
examples/: hello_redisearch.rs
src/: document.rs  index.rs  lib.rs
src/include/: redisearch_api.h  redisearch_defines.h
src/raw/: mod.rs
