[package]
name = "redisearch_api"
version = "0.1.0"
authors = ["Gavrie Philipson <gavrie@redislabs.com>"]
edition = "2018"

#links = "redisearch"
#build = "build.rs"

[[example]]
name = "hello_redisearch"
crate-type = ["cdylib"]

[dependencies]
bitflags = "1.1"
libc = "0.2"
time = "0.1"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.8"

[dependencies.redis-module]
git = "https://github.com/redislabsmodules/redismodule-rs.git"
branch = "master"
features = ["experimental-api"] # Required by RediSearch

[build-dependencies]
bindgen = "0.51"
cmake = "0.1"
